compiler/tests/errortests/try-infer-void-return.txt
FILENAME:7:9: error: Variable 'x' cannot be of type 'void'.
    let x = do_stuff();
        ^
